--- a/seafile/docker-compose.yml
+++ b/seafile/docker-compose.yml
@@ -1,6 +1,11 @@
 version: "3.7"
 
 services:
+  app_proxy:
+    environment:
+      APP_HOST: seafile_web_1
+      APP_PORT: 80
+      PROXY_AUTH_ADD: "false"
   db:
     image: mariadb:10.9.4@sha256:5e2a3416f8633f8ca25778d13439cfcee4172743e1bd2a45cd1def0dceff6d3b
     container_name: seafile-mysql
@@ -9,21 +14,16 @@ services:
       - MYSQL_LOG_CONSOLE=true
     volumes:
       - ${APP_DATA_DIR}/data/store:/var/lib/mysql
-    networks:
-      - seafile-net
 
   memcached:
     image: memcached:1.5.6@sha256:375aa6d08b4ad5efe55421237ce8598e006505b4bd9ff14806359daff5334f91
     container_name: seafile-memcached
     entrypoint: memcached -m 256
-    networks:
-      - seafile-net
 
-  seafile:
+  web:
     image: seafileltd/seafile-mc:9.0.9@sha256:7ac833196f60753c5b465e1862894458b0ebd1cd35f5fac923a4be13da0fa330
     container_name: seafile
-    ports:
-      - "8920:80"
+    user: 1000:1000
     volumes:
       - ${APP_DATA_DIR}/seafile-data:/shared
     environment:
@@ -32,8 +32,7 @@ services:
     depends_on:
       - db
       - memcached
-    networks:
-      - seafile-net
 
-networks:
-  seafile-net:
+volumes:
+  - ${APP_DATA_DIR}/data/store
+  - ${APP_DATA_DIR}/seafile-data
