--- a/ride-the-lightning/docker-compose.yml
+++ b/ride-the-lightning/docker-compose.yml
@@ -28,7 +28,7 @@ services:
         # LND connection details
         LN_SERVER_URL: "https://$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_REST_PORT"
         MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK"
-        CONFIG_PATH: "/lnd/lnd.conf"
+        CONFIG_PATH: "/lnd/umbrel-lnd.conf"
 
         # Boltz
         BOLTZ_SERVER_URL: "https://ride-the-lightning_boltz_1:9003"
