--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ride-the-lightning
 category: bitcoin
 name: Ride The Lightning
-version: "0.14.0-beta"
+version: "0.14.0-beta-hotfix-1"
 tagline: A powerful dashboard for the Lightning Network
 description: >-
   RTL is a full function, device agnostic, web user interface to help
@@ -40,7 +40,9 @@ gallery:
   - 2.jpg
   - 3.jpg
 releaseNotes: >-
-  This release updates the Ride The Lightning app to v0.14.0-beta, and includes bug fixes and performance improvements:
+  This is a simple hotfix release to allow users to view their LND configuration file directly in the UI by accessing the Ride The Lightning app, selecting "Node Config" from the menu, and then selecting "LND Config".
+
+  The previous v0.14.0-beta release included bug fixes and performance improvements:
 
   - Navigation bug fixes from the dashboard
 
