Mount socket at /var/run/docker.sock

--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -26,9 +26,6 @@ services:
 
   portainer:
     image: portainer/portainer-ce:2.19.0
-    environment:
-      DOCKER_HOST: unix:///docker-data/docker.sock
-    # command: --bind :9000 --host unix:///docker-data/docker.sock
     volumes:
       - ${APP_DATA_DIR}/data/portainer:/data
-      - ${APP_DATA_DIR}/data/docker:/docker-data
+      - ${APP_DATA_DIR}/data/docker:/var/run
