Set default password to avoid 5min timeout

--- a/portainer/umbrel-app.yml
+++ b/portainer/umbrel-app.yml
@@ -17,8 +17,8 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
-defaultUsername: ""
-defaultPassword: ""
+defaultUsername: "admin"
+defaultPassword: "changeme"
 releaseNotes:
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/...
