--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -26,6 +26,8 @@ services:
 
   portainer:
     image: portainer/portainer-ce:2.19.0
+    command: --admin-password-file=/default-password
     volumes:
+      - ${APP_DATA_DIR}/default-password:/default-password
       - ${APP_DATA_DIR}/data/portainer:/data
       - ${APP_DATA_DIR}/data/docker:/var/run
