--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.76.1"
+version: "v1.77.0"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -46,7 +46,12 @@ description: >-
   - User-defined storage structure
 releaseNotes: >-
   This update brings the following new features, bug fixes and performance improvements to Immich:
+  
 
+  - Show original uploader in shared album photo details
+
+  - Improved assets upload
+  
   - Map view on mobile
   
   - Customizable machine learning settings
