fix spelling mistake

--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -34,7 +34,7 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  This update from version 1.11.1 to 1.11.4 includes many bug fixes and imporovements, as well as a new feature
+  This update from version 1.11.1 to 1.11.4 includes many bug fixes and improvements, as well as a new feature
   to display wallet balance in default currency in the on-chain wallet navigation.
 
 
