tweak release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,20 +45,15 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
-  This update brings the following new features, bug fixes and performance improvements to Immich:
+  This update includes many bug fixes and performance improvements, including the following highlights:
   
-
   - Show original uploader in shared album photo details
 
   - Improved assets upload
   
-  - Map view on mobile
-  
   - Customizable machine learning settings
 
-  - Fix machine learning minScore not being set correctly
-  
-  - and more!
+  - A fix for machine learning minScore not being set correctly
 
 
   Full release notes are found at: https://github.com/immich-app/immich/releases
