--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.75.2"
+version: "v1.77.0"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -44,23 +44,16 @@ description: >-
   - LivePhoto backup and playback
   
   - User-defined storage structure
-releaseNotes: >
-  ⚠️ This update includes the following breaking changes for advanced users who have modified their docker-compose.yml file:
+releaseNotes: >-
+  This update includes many bug fixes and performance improvements, including the following highlights:
   
-  - To disable machine learning now, use IMMICH_MACHINE_LEARNING_ENABLED=false (previously IMMICH_MACHINE_LEARNING_URL=false)
-  
-  - Sentence-Transformers is no longer used for CLIP models, users who set MACHINE_LEARNING_CLIP_IMAGE_MODEL or MACHINE_LEARNING_CLIP_TEXT_MODEL must migrate to one of the ViT-B models listed here, with the caveat that OpenCLIP models will require running CLIP on all images since the embeddings are incompatible.
-  
+  - Show original uploader in shared album photo details
 
-  This update brings the following new features to Immich:
-
-  - Add the ability to use a configuration file for bootstrapping an Immich instance instead of using the administration web UI
-
-  - Machine learning sub-jobs can now be configured via the administration web UI
+  - Improved assets upload
   
-  - Slide show mode on the web
-  
-  - and more!
+  - Customizable machine learning settings
+
+  - A fix for machine learning minScore not being set correctly
 
 
   Full release notes are found at: https://github.com/immich-app/immich/releases
