--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: syncthing
 category: files
 name: Syncthing
-version: "1.23.7"
+version: "1.24.0"
 tagline: Peer-to-peer file synchronization between your devices
 description: >-
   Syncthing is a peer-to-peer continuous file synchronization
@@ -28,21 +28,17 @@ defaultPassword: ""
 releaseNotes: >-
   This release includes the following bug fixes and enhancements:
 
-  - On Windows, the setLowPriority function should avoid increasing the process priority if it's already set to a lower value.
+  - v1.23.6 introduces untrusted sharing regression
 
-  - The extended attribute filter editor should become active when the "send extended attributes" option is selected.
+  - Record more performance metrics
 
-  - The 'Shared With' list improperly concludes with a comma on a specific device.
+  - Announce IPv6 ULA
 
-  - There's a fix for the 'relaysrv' which would crash after operating for several weeks.
+  - Restore versions file filter should be case insensitive
 
-  - Integration of govulncheck has been completed.
+  - Check interface for FlagRunning
 
-  - The system will no longer automatically expand the tilde sign (~) into the full home directory path.
-
-  - Errors concerning invalid Windows file names will now specify the problematic character or segment of the name.
   
-  
-  Full release notes can be found at https://github.com/syncthing/syncthing/releases
+  Full release notes can be found at https://github.com/syncthing/syncthing/releases/tag/v1.24.0
 submitter: Sam Cymbaluk
 submission: https://github.com/getumbrel/umbrel/pull/1092
