add 1min stop_grace_period for dind container

--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     image: docker:24.0.5-dind
     privileged: true
     network_mode: host
+    stop_grace_period: 1m
     environment:
       DOCKER_ENSURE_BRIDGE: "dind0:10.32.0.1/16"
     entrypoint: /entrypoint.sh
