--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: thunderhub
 category: bitcoin
 name: ThunderHub
-version: "0.13.21"
+version: "0.13.23"
 tagline: Take full control of your Lightning node
 description: >-
   ThunderHub allows you to take full control of your Lightning node
@@ -28,14 +28,13 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  - add dataloaders
+  - Updated dependencies
+  
+  - Extra logs
 
-  - updated charts (Echarts)
+  - Changes to Forwards
 
-  - fix sorting on 'Channels' table
-
-  - add signet compatibility
-
+  - Bugfixex for balance push and undefined type
   
   Full release notes can be found at https://github.com/apotdevin/thunderhub/releases
 submitter: Anthony Potdevin
