--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     privileged: true
     network_mode: host
     stop_grace_period: 1m
+    restart: on-failure
     environment:
       DOCKER_ENSURE_BRIDGE: "dind0:10.32.0.1/16"
     entrypoint: /entrypoint.sh
@@ -28,6 +29,7 @@ services:
   portainer:
     image: portainer/portainer-ce:2.19.0
     command: --admin-password-file=/default-password
+    restart: on-failure
     volumes:
       - ${APP_DATA_DIR}/default-password:/default-password
       - ${APP_DATA_DIR}/data/portainer:/data
