--- a/portainer/umbrel-app.yml
+++ b/portainer/umbrel-app.yml
@@ -5,8 +5,22 @@ name: Portainer
 version: "2.19.0"
 tagline: Making Docker easy
 description: >-
-  Portainer Community Edition is a lightweight service delivery platform for containerized applications that can be used to manage Docker, Swarm, Kubernetes and ACI environments. It is designed to be as simple to deploy as it is to use. The application allows you to manage all your orchestrator resources (containers, images, volumes, networks and more) through a ‘smart’ GUI and/or an extensive API.
-developer: Portainer.io
+  Portainer Community Edition is a lightweight service delivery platform for containerized applications that can be used to manage Docker, Swarm, Kubernetes and ACI environments.
+  It is designed to be as simple to deploy as it is to use. The application allows you to manage all your orchestrator resources (containers, images, volumes, networks and more)
+  through a ‘smart’ GUI and/or an extensive API.
+
+
+  Getting Started with Portainer on Umbrel:
+
+  1. INITIAL SETUP: After installation, reset the default password and log back in to Portainer. Once logged in, click "Get Started" and then connect to the existing "local" docker environment.
+
+  2. PORT MANAGEMENT: Be aware of potential port clashes with apps already installed from the Umbrel App Store or Community App Stores, or those you plan to install in the future.
+
+  3. DATA PERSISTENCE: To persist data you must use named Docker volumes. Avoid bind mounts as they will result in data loss when the Portainer app is restarted.
+
+  4. CONTAINER RESTART POLICY: Set your containers to "unless-stopped" or "always" restart policies. This will allow your containers to start automatically after the Portainer app is restarted.
+
+  5. WEB ACCESS TO CONTAINERS: Access your running containers in your browser via umbrel.local/<mapped-port>. For example, for a container with a web UI running on port 4545, navigate to umbrel.local/4545.
 website: https://portainer.io
 dependencies: []
 repo: https://github.com/portainer/portainer
