add developer to manifest

--- a/portainer/umbrel-app.yml
+++ b/portainer/umbrel-app.yml
@@ -38,6 +38,7 @@ gallery:
 path: ""
 defaultUsername: "admin"
 defaultPassword: "changeme"
-releaseNotes:
+releaseNotes: ""
+developer: Portainer
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/...
