--- a/portainer/umbrel-app.yml
+++ b/portainer/umbrel-app.yml
@@ -10,22 +10,19 @@ description: >-
   through a ‘smart’ GUI and/or an extensive API.
 
 
-  Getting Started with Portainer on Umbrel:
+  🛠️ Best Practices for Using Portainer on Umbrel:
 
 
-  1. INITIAL SETUP: After installation, open Portainer, reset the default password, and log back in to the app. Once logged in, click "Get Started" and then connect to the existing "local" docker environment.
+  PORT MANAGEMENT: Be aware of potential port clashes with umbrelOS containers, apps you have installed from the Umbrel App Store or Community App Stores, and any apps you go to install in the future.
 
 
-  2. PORT MANAGEMENT: Be aware of potential port clashes with umbrelOS containers, apps you have installed from the Umbrel App Store or Community App Stores, and any apps you go to install in the future.
+  DATA PERSISTENCE: To persist data you must use named Docker volumes. Avoid bind mounts as they will result in data loss when the Portainer app is restarted.
 
 
-  3. DATA PERSISTENCE: To persist data you must use named Docker volumes. Avoid bind mounts as they will result in data loss when the Portainer app is restarted.
+  CONTAINER RESTART POLICY: Set your containers to "unless-stopped" or "always" restart policies. This will allow your containers to restart automatically when the Portainer app is restarted.
 
 
-  4. CONTAINER RESTART POLICY: Set your containers to "unless-stopped" or "always" restart policies. This will allow your containers to restart automatically when the Portainer app is restarted.
-
-
-  5. WEB ACCESS TO CONTAINERS: Access your running containers in your browser via umbrel.local/<mapped-port>. For example, for a container with a web UI running on port 4545, navigate to umbrel.local/4545.
+  WEB ACCESS TO CONTAINERS: Access your running containers in your browser via umbrel.local/<mapped-port>. For example, for a container with a web UI running on port 4545, navigate to umbrel.local/4545.
 website: https://portainer.io
 dependencies: []
 repo: https://github.com/portainer/portainer
