correct web access instructions

--- a/portainer/umbrel-app.yml
+++ b/portainer/umbrel-app.yml
@@ -22,7 +22,7 @@ description: >-
   CONTAINER RESTART POLICY: Set your containers to "unless-stopped" or "always" restart policies. This will allow your containers to restart automatically when the Portainer app is restarted.
 
 
-  WEB ACCESS TO CONTAINERS: Access your running containers in your browser via umbrel.local/<mapped-port>. For example, for a container with a web UI running on port 4545, navigate to umbrel.local/4545.
+  WEB ACCESS TO CONTAINERS: Access your running containers in your browser via umbrel.local:<mapped-port>. For example, for a container with a web UI running on port 4545, navigate to umbrel.local:4545.
 website: https://portainer.io
 dependencies: []
 repo: https://github.com/portainer/portainer
