--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -34,8 +34,9 @@ releaseNotes: >-
 
   - Changes to Forwards
 
-  - Bugfixex for balance push and undefined type
+  - Bugfixes for balance push and undefined type
   
+
   Full release notes can be found at https://github.com/apotdevin/thunderhub/releases
 submitter: Anthony Potdevin
 submission: https://github.com/getumbrel/umbrel/pull/343
