--- a/seafile/docker-compose.yml
+++ b/seafile/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - MYSQL_ROOT_PASSWORD=wiufh%woi&rwioj*q
       - MYSQL_LOG_CONSOLE=true
     volumes:
-      - ${APP_DATA_DIR}/data/store:/var/lib/mysql
+      - ${APP_DATA_DIR}/data/db:/var/lib/mysql
 
   memcached:
     image: memcached:1.5.6@sha256:375aa6d08b4ad5efe55421237ce8598e006505b4bd9ff14806359daff5334f91
