remove db user and change mysql pw

--- a/seafile/docker-compose.yml
+++ b/seafile/docker-compose.yml
@@ -9,9 +9,8 @@ services:
   db:
     image: mariadb:10.11@sha256:3e8f15fd6328340f4024fcb7005cce0da1fa5065554b7c420626f803b67ddc12
     container_name: seafile-mysql
-    user: 1000:1000
     environment:
-      - MYSQL_ROOT_PASSWORD=wiufh%woi&rwioj*q
+      - MYSQL_ROOT_PASSWORD=db_dev
       - MYSQL_LOG_CONSOLE=true
     volumes:
       - ${APP_DATA_DIR}/data/db:/var/lib/mysql
