--- a/seafile/docker-compose.yml
+++ b/seafile/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       APP_HOST: seafile_web_1
       APP_PORT: 80
       PROXY_AUTH_ADD: "false"
+
   db:
     image: mariadb:10.11@sha256:3e8f15fd6328340f4024fcb7005cce0da1fa5065554b7c420626f803b67ddc12
     container_name: seafile-mysql
@@ -27,7 +28,7 @@ services:
       - ${APP_DATA_DIR}/seafile-data:/shared
     environment:
       - DB_HOST=db
-      - DB_ROOT_PASSWD=wiufh%woi&rwioj*q
+      - DB_ROOT_PASSWD=db_dev
     depends_on:
       - db
       - memcached
