--- a/seafile/docker-compose.yml
+++ b/seafile/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: seafile_web_1
+      APP_HOST: seafile
       APP_PORT: 80
       PROXY_AUTH_ADD: "false"
 
