Revert "change lightningd container bind mount"
This reverts commit 1e847969e668cd7925fd5ec389349c9048fb78e1.

--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -72,7 +72,7 @@ services:
       - --experimental-offers
       #- --grpc-port=${APP_CORE_LIGHTNING_DAEMON_GRPC_PORT}
     volumes:
-      - "${APP_DATA_DIR}/data/lightningd:/root/.lightning"
+      - "${APP_DATA_DIR}/data/lightningd:/data/.lightning"
     networks:
       default:
         ipv4_address: ${APP_CORE_LIGHTNING_DAEMON_IP}
