Updated cln-application to version 0.0.4

--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -34,6 +34,15 @@ submission: https://github.com/getumbrel/umbrel-apps/pull/475
 releaseNotes: >-
   This release brings updates to the underlying c-lightning-REST and lightningd components of the Core Lightning app.
 
+  cln-application:
+
+  - bug fix by filtering lnmessage's pubkey from peers list
+
+  - added support for more fiat currencies
+
+
+  Full cln-application release notes are available at https://github.com/ElementsProject/cln-application/releases/tag/v0.0.4
+
 
   c-lightning-REST:
 
