--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_CORE_LIGHTNING_PORT
 
   app:
-    image: ghcr.io/elementsproject/cln-application:0.0.3@sha256:05595731a98a17aff6603b9ad35aaa17825bf1e51dd22da409c37f9fce5d2b2e
+    image: ghcr.io/elementsproject/cln-application:0.0.4@sha256:5c4c930c0bd4b71de202b6166affd76c080a66bd7021877ffaa471207470bbfa
     command: npm run start
     restart: on-failure
     volumes:
@@ -15,6 +15,7 @@ services:
       - ${APP_DATA_DIR}/data/lightningd:${APP_CORE_LIGHTNING_DATA_DIR}
       - ${APP_CORE_LIGHTNING_REST_CERT_DIR}:${APP_REST_CERT_VOLUME_DIR}
     environment:
+      SINGLE_SIGN_ON: "true"
       APP_CORE_LIGHTNING_IP: ${APP_CORE_LIGHTNING_IP}
       APP_CORE_LIGHTNING_PORT: ${APP_CORE_LIGHTNING_PORT}
       APP_CORE_LIGHTNING_BITCOIN_NETWORK: ${APP_CORE_LIGHTNING_BITCOIN_NETWORK}
