tweak release notes

--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -32,9 +32,10 @@ defaultPassword: ""
 submitter: Blockstream
 submission: https://github.com/getumbrel/umbrel-apps/pull/475
 releaseNotes: >-
-  This release brings updates to the underlying c-lightning-REST and lightningd components of the Core Lightning app.
+  This release updates the user interface, as well as the underlying c-lightning-REST and lightningd components of the Core Lightning app.
 
-  cln-application:
+
+  cln-application v0.0.4 (user interface):
 
   - bug fix by filtering lnmessage's pubkey from peers list
 
@@ -44,7 +45,7 @@ releaseNotes: >-
   Full cln-application release notes are available at https://github.com/ElementsProject/cln-application/releases/tag/v0.0.4
 
 
-  c-lightning-REST:
+  c-lightning-REST v0.10.5:
 
   - plugin.js renamed to clrest.js (required for reckless plugin manager)
   
@@ -78,7 +79,7 @@ releaseNotes: >-
   Full c-lightning-REST release notes are available at https://github.com/Ride-The-Lightning/c-lightning-REST/releases
 
 
-  lightningd:
+  lightningd v23.08:
 
   - NEW experimental feature: peer storage - back up your encrypted emergency channel backup with your peers
 
