tweak release notes

--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -44,29 +44,14 @@ gallery:
 path: ""
 deterministicPassword: true
 releaseNotes: >-
-  ⚠️ This release covers breaking changes from CLN 23.05, few minor UX enhancements and bug fixes
-
-  Core Lightning users should note that this update depends on cl-rest v0.10.3 and Core Lightning v23.05. If you are running any version older than 23.05, you should not upgrade to this UI. The changes are not backwards compatible with older versions of Core Lightning
+  ⚠️ Please update your Core Lightning app to the latest version in the Umbrel App store. This is critical for ensuring compatibility with this version of Ride The Lightning.
 
 
-  Core Lightning:
+  This release covers breaking changes from CLN 23.05, as well as a few minor UX enhancements and bug fixes
 
   - Handle the breaking changes of the msat purge for CLN version v23.05
 
   - Track active HTLCs on the channels page
-
-
-  Eclair:
-
-  - Circular rebalancing
-
-
-  LND:
-
-  - Bugs fixes owing to the breaking changes on the send payment API
-
-
-  General:
 
   - Navigation bug fixes from the dashboard
 
