--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -47,7 +47,7 @@ releaseNotes: >-
   ⚠️ Please update your Core Lightning app to the latest version in the Umbrel App store. This is critical for ensuring compatibility with this version of Ride The Lightning.
 
 
-  This release covers breaking changes from CLN 23.05, as well as a few minor UX enhancements and bug fixes
+  This release covers breaking changes from CLN 23.05, as well as a few minor UX enhancements and bug fixes:
 
   - Handle the breaking changes of the msat purge for CLN version v23.05
 
