--- a/portainer/umbrel-app.yml
+++ b/portainer/umbrel-app.yml
@@ -3,7 +3,7 @@ id: portainer
 category: developer
 name: Portainer
 version: "2.19.0"
-tagline: Making Docker easy
+tagline: Run custom Docker containers on your Umbrel
 description: >-
   Portainer Community Edition is a lightweight service delivery platform for containerized applications that can be used to manage Docker, Swarm, Kubernetes and ACI environments.
   It is designed to be as simple to deploy as it is to use. The application allows you to manage all your orchestrator resources (containers, images, volumes, networks and more)
