update pull request link

--- a/portainer/umbrel-app.yml
+++ b/portainer/umbrel-app.yml
@@ -53,4 +53,4 @@ defaultPassword: "changeme"
 releaseNotes: ""
 developer: Portainer
 submitter: Umbrel
-submission: https://github.com/getumbrel/umbrel-apps/pull/...
+submission: https://github.com/getumbrel/umbrel-apps/pull/774
