Update Librespeed Web UI port (#775)

--- a/librespeed/umbrel-app.yml
+++ b/librespeed/umbrel-app.yml
@@ -2,16 +2,18 @@ manifestVersion: 1
 id: librespeed
 category: networking
 name: LibreSpeed
-version: "0.0.1"
+version: "5.2.5"
 tagline: Free and open source speedtest
 description: >-
   Free and open source speedtest. Measure internet speeds between your devices and your Umbrel.
+releaseNotes: >-
+  Librespeed now runs on port 3011 to avoid a port conflict with the Samourai Server app. No other changes have been made to Librespeed.
 developer: LibreSpeed
 website: https://librespeed.org/
 dependencies: []
 repo: https://github.com/librespeed/speedtest
 support: https://github.com/librespeed/speedtest/issues
-port: 3009
+port: 3011
 gallery:
   - 1.jpg
   - 2.jpg
