fix release notes

--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -36,5 +36,8 @@ submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
   vere-v2.12 declares compatibility with the upcoming 412k urbit-os
-  release. It includes support for the 0ck vane, modifications to galaxy
-  packet forwarding and a bugfix to the 
+  release. It includes support for the lick vane, modifications to galaxy
+  packet forwarding and a bugfix to the %khan driver.
+
+
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.12
