--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.77.0"
+version: "v1.79.1"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -47,13 +47,15 @@ description: >-
 releaseNotes: >-
   This update includes many bug fixes and performance improvements, including the following highlights:
   
-  - Show original uploader in shared album photo details
+  - Support for external libraries
 
-  - Improved assets upload
+  - Better synchronization mechanism on the mobile app
   
-  - Customizable machine learning settings
+  - Set minimum detected face to show on your instance
 
-  - A fix for machine learning minScore not being set correctly
+  - Allow self-signed certificate on the mobile app
+
+  - Fixed LivePhotos upload on iOS
 
 
   Full release notes are found at: https://github.com/immich-app/immich/releases
