--- a/amato/umbrel-app.yml
+++ b/amato/umbrel-app.yml
@@ -7,7 +7,7 @@ tagline: Simple work timer.
 description: >-
   A simple timer with default 25 minute increments to track your work.
 releaseNotes: >-
-  This is an initial alpha version
+  releaseNotes: ""
 developer: Bitparasol
 website: http://bitparasol.com
 port: 3838
