--- a/amato/umbrel-app.yml
+++ b/amato/umbrel-app.yml
@@ -18,3 +18,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+submitter: ziadgit
+submission: https://github.com/getumbrel/umbrel-apps/pull/729
