--- a/snort/docker-compose.yml
+++ b/snort/docker-compose.yml
@@ -7,5 +7,5 @@ services:
       APP_PORT: 80
 
   web:
-    image: voidic/snort:v0.1.13@sha256:fb84c97b5737084a124ee341a37ce6e6c6cbbfc0ff1adb6bfcad3405788581ee
+    image: voidic/snort@sha256:f9c7d877f4229952c61a0e7ca3ccceef79f56dc79259dfbe8422f064e508b14d
     init: true
