add app submission link

--- a/jackett/umbrel-app.yml
+++ b/jackett/umbrel-app.yml
@@ -22,4 +22,4 @@ permissions:
   - STORAGE_DOWNLOADS
 torOnly: false
 submitter: Pranshu Agrawal
-submission: ""
+submission: "https://github.com/getumbrel/umbrel-apps/pull/665"
