update app description
Co-authored-by: Parth Jadhav <jadhavparth99@gmail.com>

--- a/seafile/umbrel-app.yml
+++ b/seafile/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: seafile
-category: Files
+category: files
 name: SeaFile
 version: "10.0.1"
 tagline: High performance file syncing and sharing
