Change app port

--- a/romm/umbrel-app.yml
+++ b/romm/umbrel-app.yml
@@ -7,13 +7,12 @@ version: "1.10"
 tagline: Rom Manager.
 description: >-
   RomM (Rom Manager) is a web based retro roms manager integrated with IGDB.
-releaseNotes: >-
-  First Version
+releaseNotes: ""
 developer: zurdi15
 website: https://github.com/zurdi15/romm
 repo: https://github.com/zurdi15/romm
 support: https://github.com/zurdi15/romm/issues
-port: 3003
+port: 4002
 submitter: Mateo Silguero
 submission: https://github.com/getumbrel/umbrel-apps/pull/755
 gallery:
