--- a/actual-budget/docker-compose.yml
+++ b/actual-budget/docker-compose.yml
@@ -3,8 +3,9 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: actual-budget_web_1
+      APP_HOST: actual-budget-web-1
       APP_PORT: 5006
+      PROXY_AUTH_ADD: "false"
   
   web:
     image: actualbudget/actual-server:latest
