--- a/actual-budget/docker-compose.yml
+++ b/actual-budget/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
   
   web:
-    image: actualbudget/actual-server:latest
+    image: actualbudget/actual-server:latest@sha256:19ef6ce46b2fe9ce61178648e9e13831b29040fd6a4c80130fb3f7c2bd9dfc5a
     restart: on-failure
     stop_grace_period: 1m
     volumes:
