--- a/actual-budget/umbrel-app.yml
+++ b/actual-budget/umbrel-app.yml
@@ -8,12 +8,7 @@ description: >-
   Actual Budget uses the well proven and much loved Envelope Budgeting methodology.
   You own your data and can do whatever you want with it. 
   Featuring multi-device sync, optional end-to-end encryption and so much more.
-releaseNotes: >-
-  Dark mode is finally here! Easily switch between your preferred mode
-  in one click.
-
-  This version also includes lots of minor styling improvements, better
-  error handling, and several bugfixes.
+releaseNotes: ""
 developer:  James Long
 website: https://actualbudget.org/
 repo: https://github.com/actualbudget/actual
@@ -26,3 +21,4 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+dependencies: []
