--- a/actual-budget/umbrel-app.yml
+++ b/actual-budget/umbrel-app.yml
@@ -22,3 +22,5 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 dependencies: []
+submitter: ~dibref-labter
+submission: https://github.com/getumbrel/umbrel-apps/pull/784
