--- a/readarr/docker-compose.yml
+++ b/readarr/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_WHITELIST: "/api/*"
 
   server:
-    image: linuxserver/readarr:0.2.4-develop
+    image: linuxserver/readarr:0.2.4-develop@sha256:5a6d8c07a93efc5d6b80479354f3dfac22d69b79c2354aa1d8da7de3982d4060
     environment:
       - PUID=1000
       - PGID=1000
