Add submission PR

--- a/readarr/umbrel-app.yml
+++ b/readarr/umbrel-app.yml
@@ -24,4 +24,4 @@ torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
 submitter: Choff3
-submission: 
+submission: https://github.com/getumbrel/umbrel-apps/pull/712
