--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -14,20 +14,16 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Get changed files
-      id: getfile
-      run: |
-        echo "::set-output name=files::$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | grep -E 'docker-compose.yml|umbrel-app.yml')"
-      shell: bash
+      id: files
+      uses: jitterbit/get-changed-files@v1
 
     - name: Run docker-compose checks
       run: |
-        IFS=$'\n' read -d '' -r -a files <<< "${{ steps.getfile.outputs.files }}"
-        for file in "${files[@]}"
-        do
-          if [[ $file == *docker-compose.yml ]]
+        for changed_file in ${{ steps.files.outputs.all }}; do
+          if [[ $changed_file == *docker-compose.yml ]]
           then
-            echo "Running docker-compose checks on $file"
-            grep 'image:' $file | while read -r line ; do
+            echo "Running docker-compose checks on $changed_file"
+            grep 'image:' $changed_file | while read -r line ; do
               IMAGE=$(echo $line | cut -d' ' -f2)
               ARCHITECTURES=$(docker run --rm mplatform/mquery:v0.5.0@sha256:d0989420b6f0d2b929fd9355f15c767f62d0e9a72cdf999d1eb16e6073782c71 $IMAGE | grep -E 'linux/amd64|linux/arm64')
               if [[ ! $ARCHITECTURES =~ "linux/amd64" ]] || [[ ! $ARCHITECTURES =~ "linux/arm" ]]; then
@@ -35,46 +31,45 @@ jobs:
                 exit 1
               fi
             done
-            if grep -q ':latest' $file ; then
+            if grep -q ':latest' $changed_file ; then
               echo "Some images use the latest tag"
               exit 1
             fi
-            if grep -q 'PROXY_AUTH_ADD: "true"' $file ; then
+            if grep -q 'PROXY_AUTH_ADD: "true"' $changed_file ; then
               echo "PROXY_AUTH_ADD is set to true"
               exit 1
             fi
-            echo "$file -> All docker-compose checks passed"
+            echo "$changed_file -> All docker-compose checks passed"
           fi
         done
       shell: bash
 
     - name: Run umbrel app checks
       run: |
-        IFS=$'\n' read -d '' -r -a files <<< "${{ steps.getfile.outputs.files }}"
-        for file in "${files[@]}"
-        do
-          if [[ $file == *umbrel-app.yml ]]
+        for changed_file in ${{ steps.files.outputs.all }}; do
+          if [[ $changed_file == *umbrel-app.yml ]]
           then
-            echo "Running umbrel app checks on $file"
+            echo "Running umbrel app checks on $changed_file"
             REQUIRED_FIELDS=("manifestVersion" "id" "category" "name" "version" "tagline" "description" "developer" "website" "dependencies" "support" "port" "gallery")
             for FIELD in "${REQUIRED_FIELDS[@]}"; do
-              if ! grep -q "^$FIELD:" $file ; then
+              if ! grep -q "^$FIELD:" $changed_file ; then
                 echo "Required field $FIELD is missing"
                 exit 1
               fi
             done
-            CATEGORY=$(grep 'category:' $file | cut -d':' -f2 | tr -d '[:space:]')
+            CATEGORY=$(grep 'category:' $changed_file | cut -d':' -f2 | tr -d '[:space:]')
             if [[ $CATEGORY != $(echo "$CATEGORY" | tr '[:upper:]' '[:lower:]') ]]; then
               echo "Category value is not lowercase"
               exit 1
             fi
             OPTIONAL_FIELDS=("submission" "submitter" "defaultPassword" "defaultUsername" "repo")
             for FIELD in "${OPTIONAL_FIELDS[@]}"; do
-              if ! grep -q "$FIELD:" $file ; then
+              if ! grep -q "$FIELD:" $changed_file ; then
                 echo "Warning: Optional field $FIELD is missing"
               fi
             done
-            echo "$file -> All umbrel app checks passed"
+            echo "$changed_file -> All umbrel app checks passed"
           fi
         done
       shell: bash
+
