--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Get changed files
       id: files
-      uses: jitterbit/get-changed-files@v1
+      uses: Ana06/get-changed-files@v2.2.0
 
     - name: Run docker-compose checks
       run: |
