--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -96,12 +96,8 @@ jobs:
           If there are any errors, they will be listed below:
           Errors:
           `docker-compose.yml`
-          ${{ steps.docker_compose_checks.outputs.errors }}
+          ${{ steps.docker_compose_checks.outputs }}
           `umbrel-app.yml`
-          ${{ steps.umbrel_app_checks.outputs.errors }}
-          Warnings:
-          `docker-compose.yml`
-          ${{ steps.docker_compose_checks.outputs.warnings }}
-          `umbrel-app.yml`
-          ${{ steps.umbrel_app_checks.outputs.warnings }}
+          ${{ steps.umbrel_app_checks.outputs }}
+  
 
