--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -42,10 +42,10 @@ jobs:
             fi
           fi
         done
-      outputs:
-        imageError: ${{ steps.docker-compose-checks.outputs.imageError }}
-        latestTagError: ${{ steps.docker-compose-checks.outputs.latestTagError }}
-        proxyAuthError: ${{ steps.docker-compose-checks.outputs.proxyAuthError }}
+      # outputs:
+      #   imageError: ${{ steps.docker-compose-checks.outputs.imageError }}
+      #   latestTagError: ${{ steps.docker-compose-checks.outputs.latestTagError }}
+      #   proxyAuthError: ${{ steps.docker-compose-checks.outputs.proxyAuthError }}
       shell: bash
 
     - name: Run umbrel app checks
