--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -107,6 +107,6 @@ jobs:
           ${{ steps.docker_compose_checks.latestTagError }}
           ${{ steps.docker_compose_checks.proxyAuthError }}
           `umbrel-app.yml`
-          ${{ steps.umbrel_app_checks.outputs }}
+          ${{ GITHUB_OUTPUT }}
   
 
